src/test/valid/extensionTests/stdLibrary/printBoolArray.wacc
# using the print_bool_array function from the standard library

# Output:
# [true, false, true, true]

# Program:

begin
  bool[] arr = [true, false, true, true] ;
  bool b = call print_bool_array(arr)
end
