src/test/invalid/semanticErr/custom/readOnPairs.wacc
begin
  pair(bool, bool) p = newpair(true , true);
  read p
end
